fixed the image adding issue
